fix: too long height images are crushed

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -48,7 +48,6 @@ hr {
 img {
   display: block;
   max-width: 650px;
-  max-height: 650px;
   height: auto;
   margin-left: auto;
   margin-right: auto;
